--- a/index.html
+++ b/index.html
@@ -148,7 +148,8 @@
         <div class="section-content">
             <h2>Projects</h2>
             <ul>
-                <li><a href="#">Digital Portfolio</a></li> 
+                <li><a href="#">Digital Portfolio</a></li>
+ 
                 <!-- Add more project links here -->
             </ul>
         </div>
@@ -159,7 +160,7 @@
         <div class="section-content">
             <center>
             <h2>Resume</h2>
-            <a href="file.pdf" target="_blank" class="download-button">Download CV</a>
+            <a href="resume.pdf" target="_blank" class="download-button">Download CV</a>
         </center>
         </div>
         
